Add page docs.html and updates links

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Alfa Médico Hospitalar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name=”description” content="Alfa Médico Hospitalar Distribuição e comércio de produtos e equipamentos médico-hospitalar, trabalhamos representando empresas como a Nestlé Health Science, Baxter e Medcorp. Atuamos nas seguintes linhas: Nutrição Enteral, Fórmula Infantil, Nutrição Parenteral, Tecnologia de Infusão, Anestesiologia, Linha de Cateteres." />
     <link href="css/base.css" rel="stylesheet">
     <link href="css/alfa.css" rel="stylesheet">
     <link href="css/core.css" rel="stylesheet">
@@ -137,7 +138,7 @@
           <div class="content-box border-content">
             <h3 class="heading-1">Nossos catálogos</h3>
             <div class="item-thumbs">
-              <a href="#fakelink" class="hover-wrap" title="Caltálogo">
+              <a href="pages/docs.html" class="hover-wrap" title="Caltálogo">
               <span class="overlay-img"></span>
               <span class="overlay-img-ico icon-4"></span>
               </a>
@@ -502,7 +503,7 @@
               <div class="box-footer">
                 <h3 class="heading-1">Nossos catálogos</h3>
                 <div class="item-thumbs">
-                  <a href="#fakelink" class="hover-wrap" title="Caltálogo">
+                  <a href="pages/docs.html" class="hover-wrap" title="Caltálogo">
                   <span class="overlay-img"></span>
                   <span class="overlay-img-ico icon-4"></span>
                   </a>
