--- a/pages/docs.html
+++ b/pages/docs.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8">
-    <title>Produtos · Alfa Médico Hospitalar</title>
+    <title>Baixe Nossos Catálogos · Alfa Médico Hospitalar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../css/base.css" rel="stylesheet">
     <link href="../css/alfa.css" rel="stylesheet">
@@ -27,7 +27,7 @@
             <h1 class="hide">Menu de avegação</h1>
             <a href="../index.html" title="Homepage">Home<span class="icon-10"></span></a>
             <a href="../about/about.html" title="Sobre Nós">Sobre Nós<span class="icon-10"></span></a>
-            <a class="current" title="Produtos">Produtos<span class="icon-10"></span></a>
+            <a href="../products/products.html" title="Produtos">Produtos<span class="icon-10"></span></a>
             <a href="../pages/service.html" title="Serviços">Serviços<span class="icon-10"></span></a>
             <a href="../news/blog.html" title="Notícias">Notícias<span class="icon-10"></span></a>
             <a href="../contact.html" title="Contato">Contato<span class="icon-10"></span></a>
@@ -94,13 +94,31 @@
             </div>
           </div>
           <div class="row">
-            <section class="col-xs-12">
+            <section class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
               <div class="border-content">
                 <div class="clearfix">
-                  <h1 class="title-front mb-3">Conheça a nossa linha de produtos</h1>
+                  <i class="icon-1 title-icon-front"></i>
+                  <h2 class="title-front">Facilidade & Inovação</h2>
                 </div>
-                <p>Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.</p>
+              </div>
+            </section>
+            <section class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+              <div class="border-content">
+                <div class="clearfix">
+                  <i class="icon-2 title-icon-front"></i>
+                  <h2 class="title-front">Experiência de Longo Prazo</h2>
+                </div>
+                <p>Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.</p>
+              </div>
+            </section>
+            <section class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+              <div class="border-content">
+                <div class="clearfix">
+                  <i class="icon-3 title-icon-front"></i>
+                  <h2 class="title-front">Assistência Contínua</h2>
+                </div>
+                <p>Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico.</p>
               </div>
             </section>
           </div>
@@ -108,130 +126,169 @@
       </div>
     </header>
     <main class="container" role="main">
-      <h3 class="heading-1">Navegue por empresa</h3>
-      <section class="row">
+      <h1 class="title-front mb-3">Baixe nossos catálogos</h1>
+      <section class="row mb-3">
         <div class="col-xs-12 col-sm-12 col-md-4">
-          <div class="content-box">
+          <div class="content-box border-content">
             <figure class="item-thumbs">
               <a href="list.html" class="hover-wrap" title="Nestlé Health Science">
               <span class="overlay-img"></span>
-              <span class="overlay-img-ico icon-7"></span>
+              <span class="overlay-img-ico icon-4"></span>
               </a>
               <img src="../images/corp-1.jpg" class="img-responsive" alt="Nestlé Health Science"/>
             </figure>
+            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação.</p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
-          <div class="content-box">
+          <div class="content-box border-content">
             <figure class="item-thumbs">
               <a href="list.html" class="hover-wrap" title="Baxter">
               <span class="overlay-img"></span>
-              <span class="overlay-img-ico icon-7"></span>
+              <span class="overlay-img-ico icon-4"></span>
               </a>
               <img src="../images/corp-2.jpg" class="img-responsive" alt="Baxter"/>
             </figure>
+            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação.</p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
-          <div class="content-box">
+          <div class="content-box border-content">
             <figure class="item-thumbs">
               <a href="list.html" class="hover-wrap" title="Medcorp">
               <span class="overlay-img"></span>
-              <span class="overlay-img-ico icon-7"></span>
+              <span class="overlay-img-ico icon-4"></span>
               </a>
               <img src="../images/corp-3.jpg" class="img-responsive" alt="Medcorp"/>
             </figure>
+            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação.</p>
           </div>
         </div>
       </section>
-      <h3 class="heading-1">Navegue por segmento</h3>
-      <section class="row">
-        <div class="col-xs-12 col-sm-4 col-md-4">
-          <div class="content-box content-padd">
-            <figure class="figure-box item-thumbs">
-              <a href="#fakelink" class="hover-wrap" title="Nutrição Enteral">
-              <span class="overlay-img"></span>
-              <span class="overlay-img-ico icon-7"></span>
-              </a>
-              <img src="../images/prod-4.jpg" class="img-responsive" alt="Nutrição Enteral"/>
-            </figure>
-            <h3 class="heading-2">Nutrição Enteral</h3>
-            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação.</p>
-            <a href="#fakelink" class="link-full" title="Nutrição Enteral">Visite esse segmento<span class="icon-10"></span></a>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-4 col-md-4">
-          <div class="content-box content-padd">
-            <figure class="figure-box item-thumbs">
-              <a href="#fakelink" class="hover-wrap" title="Fórmula Infantil">
-              <span class="overlay-img"></span>
-              <span class="overlay-img-ico icon-7"></span>
-              </a>
-              <img src="../images/prod-5.jpg" class="img-responsive" alt="Fórmula Infantil"/>
-            </figure>
-            <h3 class="heading-2">Fórmula Infantil</h3>
-            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação.</p>
-            <a href="#fakelink" class="link-full" title="Fórmula Infantil">Visite esse segmento<span class="icon-10"></span></a>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-4 col-md-4">
-          <div class="content-box content-padd">
-            <figure class="figure-box item-thumbs">
-              <a href="#fakelink" class="hover-wrap" title="Nutrição Enteral">
-              <span class="overlay-img"></span>
-              <span class="overlay-img-ico icon-7"></span>
-              </a>
-              <img src="../images/prod-6.jpg" class="img-responsive" alt="Nutrição Parenteral"/>
-            </figure>
-            <h3 class="heading-2">Nutrição Parenteral</h3>
-            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação.</p>
-            <a href="#fakelink" class="link-full" title="Nutrição Parenteral">Visite esse segmento<span class="icon-10"></span></a>
-          </div>
-        </div>
-      </section>
-      <section class="row">
-        <div class="col-xs-12 col-sm-4 col-md-4">
-          <div class="content-box content-padd">
-            <figure class="figure-box item-thumbs">
-              <a href="#fakelink" class="hover-wrap" title="Nutrição Enteral">
-              <span class="overlay-img"></span>
-              <span class="overlay-img-ico icon-7"></span>
-              </a>
-              <img src="../images/prod-2.jpg" class="img-responsive" alt="Tecnologia de Infusão"/>
-            </figure>
-            <h3 class="heading-2">Tecnologia de Infusão</h3>
-            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação.</p>
-            <a href="#fakelink" class="link-full" title="Tecnologia de Infusão">Visite esse segmento<span class="icon-10"></span></a>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-4 col-md-4">
-          <div class="content-box content-padd">
-            <figure class="figure-box item-thumbs">
-              <a href="#fakelink" class="hover-wrap" title="Fórmula Infantil">
-              <span class="overlay-img"></span>
-              <span class="overlay-img-ico icon-7"></span>
-              </a>
-              <img src="../images/prod-7.jpg" class="img-responsive" alt="Anestesiologia"/>
-            </figure>
-            <h3 class="heading-2">Anestesiologia</h3>
-            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação.</p>
-            <a href="#fakelink" class="link-full" title="Anestesiologia">Visite esse segmento<span class="icon-10"></span></a>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-4 col-md-4">
-          <div class="content-box content-padd">
-            <figure class="figure-box item-thumbs">
-              <a href="#fakelink" class="hover-wrap" title="Nutrição Enteral">
-              <span class="overlay-img"></span>
-              <span class="overlay-img-ico icon-7"></span>
-              </a>
-              <img src="../images/prod-3.jpg" class="img-responsive" alt="Linha de Cateteres"/>
-            </figure>
-            <h3 class="heading-2">Linha de Cateteres</h3>
-            <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação.</p>
-            <a href="#fakelink" class="link-full" title="Linha de Cateteres">Visite esse segmento<span class="icon-10"></span></a>
-          </div>
-        </div>
+      <section class="slider2">
+        <h3 class="heading-1">Produtos em Destaque</h3>
+        <ul class="slides">
+          <li>
+            <div class="row">
+              <div class="col-xs-12 col-sm-6">
+                <article class="border-content">
+                  <div class="item-thumbs">
+                    <a href="../products/product.html" class="hover-wrap" title="Fibersource® Sistema Fechado">
+                    <span class="overlay-img"></span>
+                    <span class="overlay-img-ico-2 icon-7"></span>
+                    </a>
+                    <img src="../images/prod-1.jpg" alt="Fibersource® Sistema Fechado">
+                  </div>
+                  <h4>Fibersource® Sistema Fechado</h4>
+                  <p>Alimento nutricionalmente completo para nutrição enteral ou oral, normocalórico<sup>1</sup>.</p>
+                </article>
+              </div>
+              <div class="col-xs-12 col-sm-6">
+                <article class="border-content">
+                  <div class="item-thumbs">
+                    <a href="../products/product.html" class="hover-wrap" title="Isosource® Standard Tetra Square">
+                    <span class="overlay-img"></span>
+                    <span class="overlay-img-ico-2 icon-7"></span>
+                    </a>
+                    <img src="../images/prod-2.jpg" alt="Isosource® Standard Tetra Square">
+                  </div>
+                  <h4>Isosource® Standard Tetra Square</h4>
+                  <p>Alimento nutricionalmente completo para nutrição enteral ou oral, normocalórico<sup>1</sup>.</p>
+                </article>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="row">
+              <div class="col-xs-12 col-sm-6">
+                <article class="border-content">
+                  <div class="item-thumbs">
+                    <a href="../products/product.html" class="hover-wrap" title="Isosource® 1.5 Cal Tetra Square">
+                    <span class="overlay-img"></span>
+                    <span class="overlay-img-ico-2 icon-7"></span>
+                    </a>
+                    <img src="../images/prod-3.jpg" alt="Isosource® 1.5 Cal Tetra Square">
+                  </div>
+                  <h4>Isosource® 1.5 Cal Tetra Square</h4>
+                  <p>Alimento nutricionalmente completo para nutrição enteral ou oral, hipercalórico<sup>1</sup>.</p>
+                </article>
+              </div>
+              <div class="col-xs-12 col-sm-6">
+                <article class="border-content">
+                  <div class="item-thumbs">
+                    <a href="../products/product.html" class="hover-wrap" title="Nutren® Active Banana">
+                    <span class="overlay-img"></span>
+                    <span class="overlay-img-ico-2 icon-7"></span>
+                    </a>
+                    <img src="../images/prod-4.jpg" alt="Nutren® Active Banana">
+                  </div>
+                  <h4>Nutren® Active Banana</h4>
+                  <p>Complemento alimentar em pó com 25 vitaminas e minerais.</p>
+                </article>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="row">
+              <div class="col-xs-12 col-sm-6">
+                <article class="border-content">
+                  <div class="item-thumbs">
+                    <a href="../products/product.html" class="hover-wrap" title="Nutren® Active Chocolate">
+                    <span class="overlay-img"></span>
+                    <span class="overlay-img-ico-2 icon-7"></span>
+                    </a>
+                    <img src="../images/prod-5.jpg" alt="Nutren® Active Chocolate">
+                  </div>
+                  <h4>Nutren® Active Chocolate</h4>
+                  <p>Complemento alimentar em pó com 25 vitaminas e minerais.</p>
+                </article>
+              </div>
+              <div class="col-xs-12 col-sm-6">
+                <article class="border-content">
+                  <div class="item-thumbs">
+                    <a href="../products/product.html" class="hover-wrap" title="Nutren® Senior 200 ml Baunilha">
+                    <span class="overlay-img"></span>
+                    <span class="overlay-img-ico-2 icon-7"></span>
+                    </a>
+                    <img src="../images/prod-6.jpg" alt="Nutren® Senior 200 ml Baunilha">
+                  </div>
+                  <h4>Nutren® Senior 200 ml Baunilha</h4>
+                  <p>Alimento para suplementação de nutrição enteral ou oral, hiperproteico1 e hipercalórico<sup>1</sup>.</p>
+                </article>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="row">
+              <div class="col-xs-12 col-sm-6">
+                <article class="border-content">
+                  <div class="item-thumbs">
+                    <a href="../products/product.html" class="hover-wrap" title="Resource® Thicken Up Sache">
+                    <span class="overlay-img"></span>
+                    <span class="overlay-img-ico-2 icon-7"></span>
+                    </a>
+                    <img src="../images/prod-7.jpg" alt="Resource® Thicken Up Sache">
+                  </div>
+                  <h4>Resource® Thicken Up Sache</h4>
+                  <p>Espessante e gelificante para alimentos. Não altera a cor, sabor e cheiro dos alimentos.</p>
+                </article>
+              </div>
+              <div class="col-xs-12 col-sm-6">
+                <article class="border-content">
+                  <div class="item-thumbs">
+                    <a href="../products/product.html" class="hover-wrap" title="Nestlé NAN Pro 2">
+                    <span class="overlay-img"></span>
+                    <span class="overlay-img-ico-2 icon-7"></span>
+                    </a>
+                    <img src="../images/prod-8.jpg" alt="Nestlé NAN Pro 2">
+                  </div>
+                  <h4>Nestlé NAN Pro 2</h4>
+                  <p>Espessante e gelificante para alimentos. Não altera a cor, sabor e cheiro dos alimentos.</p>
+                </article>
+              </div>
+            </div>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="container" role="contentinfo">
@@ -290,7 +347,7 @@
               <div class="box-footer">
                 <h3 class="heading-1">Acesso rápido</h3>
                 <nav class="vert-nav">
-                  <a href="products.html"><span class="icon-10"></span>Produtos</a>
+                  <a href="../products/products.html"><span class="icon-10"></span>Produtos</a>
                   <a href="../pages/service.html"><span class="icon-10"></span>Serviços</a>
                   <a href="../news/blog.html"><span class="icon-10"></span>Notícias</a>
                   <a href="../contact.html"><span class="icon-10"></span>Contato</a>
