--- a/pages/results.html
+++ b/pages/results.html
@@ -217,7 +217,7 @@
               <div class="box-footer">
                 <h3 class="heading-1">Nosso catálogo</h3>
                 <div class="item-thumbs">
-                  <a href="#fakelink" class="hover-wrap" title="Caltálogo">
+                  <a href="../pages/docs.html" class="hover-wrap" title="Caltálogo">
                   <span class="overlay-img"></span>
                   <span class="overlay-img-ico icon-4"></span>
                   </a>
